# 02-cpp11-auto-lambda-tuple

./: CMakeLists.txt  CMakePresets.json  main.cpp
.github/workflows/: release.yml
include/: ip_filter.h  otus_tasks.h
src/: CMakeLists.txt  ip_filter.cpp
tests/: CMakeLists.txt  test_ip_filter.cpp
